--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -1,35 +1,35 @@
 {
 	"comment": "CREATIVE TABS",
-	"//itemGroup.costumes": "Costumes",
+	"itemGroup.costumes": "Kostums",
 
 
 
 	"comment": "BLOCKS",
-	"//block.mubble.oak_vertical_slab": "Oak Vertical Slab",
-	"//block.mubble.spruce_vertical_slab": "Spruce Vertical Slab",
-	"//block.mubble.birch_vertical_slab": "Birch Vertical Slab",
-	"//block.mubble.jungle_vertical_slab": "Jungle Vertical Slab",
-	"//block.mubble.acacia_vertical_slab": "Acacia Vertical Slab",
-	"//block.mubble.dark_oak_vertical_slab": "Dark Oak Vertical Slab",
-	"//block.mubble.stone_vertical_slab": "Stone Vertical Slab",
-	"//block.mubble.sandstone_vertical_slab": "Sandstone Vertical Slab",
-	"//block.mubble.cobblestone_vertical_slab": "Cobblestone Vertical Slab",
-	"//block.mubble.brick_vertical_slab": "Brick Vertical Slab",
-	"//block.mubble.stone_brick_vertical_slab": "Stone Brick Vertical Slab",
-	"//block.mubble.nether_brick_vertical_slab": "Nether Brick Vertical Slab",
-	"//block.mubble.quartz_vertical_slab": "Quartz Vertical Slab",
-	"//block.mubble.red_sandstone_vertical_slab": "Red Sandstone Vertical Slab",
-	"//block.mubble.purpur_vertical_slab": "Purpur Vertical Slab",
-	"//block.mubble.prismarine_vertical_slab": "Prismarine Vertical Slab",
-	"//block.mubble.prismarine_brick_vertical_slab": "Prismarine Brick Vertical Slab",
-	"//block.mubble.dark_prismarine_vertical_slab": "Dark Prismarine Vertical Slab",
+	"block.mubble.oak_vertical_slab": "Eikenhouten verticale plaat",
+	"block.mubble.spruce_vertical_slab": "Sparrenhouten verticale plaat",
+	"block.mubble.birch_vertical_slab": "Berkenhouten verticale plaat",
+	"block.mubble.jungle_vertical_slab": "Oerwoudhouten verticale plaat",
+	"block.mubble.acacia_vertical_slab": "Acaciahouten verticale plaat",
+	"block.mubble.dark_oak_vertical_slab": "Donkereeikenhouten verticale plaat",
+	"block.mubble.stone_vertical_slab": "Steenen verticale plaat",
+	"block.mubble.sandstone_vertical_slab": "Zandsteenen verticale plaat",
+	"block.mubble.cobblestone_vertical_slab": "Kiezelstenen verticale plaat",
+	"block.mubble.brick_vertical_slab": "Bakstenen verticale plaat",
+	"block.mubble.stone_brick_vertical_slab": "Blokstenen verticale plaat",
+	"block.mubble.nether_brick_vertical_slab": "Netherstenen verticale plaat",
+	"block.mubble.quartz_vertical_slab": "Kwarts verticale plaat",
+	"block.mubble.red_sandstone_vertical_slab": "Rode Zandstenen verticale plaat",
+	"block.mubble.purpur_vertical_slab": "Purpur verticale plaat",
+	"block.mubble.prismarine_vertical_slab": "Prismarien verticale plaat",
+	"block.mubble.prismarine_brick_vertical_slab": "Prismarienblokstenen verticale plaat",
+	"block.mubble.dark_prismarine_vertical_slab": "Donkereprismarien verticale plaat",
 	
 	"block.mubble.vanadium_block": "Vanadiumblok",
 	"block.mubble.vanadium_ore": "Vanadiumerts",
-	"//block.mubble.autumn_oak_sapling": "Autumn Oak Sapling",
-	"//block.mubble.autumn_oak_leaves": "Autumn Oak Leaves",
-	"//block.mubble.cherry_oak_sapling": "Cherry Oak Sapling",
-	"//block.mubble.cherry_oak_leaves": "Cherry Oak Leaves",
+	"block.mubble.autumn_oak_sapling": "Herfsteikkiemplant",
+	"block.mubble.autumn_oak_leaves": "Herfsteikbladeren",
+	"block.mubble.cherry_oak_sapling": "Kerseneikkiemplant",
+	"block.mubble.cherry_oak_leaves": "Kerseneikbladeren",
 	"block.mubble.palm_planks": "Palmhouten planken",
 	"block.mubble.palm_sapling": "Palmkiemplant",
 	"block.mubble.palm_log": "Palmstam",
@@ -263,8 +263,8 @@
 	"block.mubble.gray_balloon": "Grijze ballon",
 	"block.mubble.black_balloon": "Zwarte ballon",
 
-	"//block.mubble.unstable_stone": "Unstable Stone",
-	"//block.mubble.fluid_tank": "Fluid Tank",
+	"block.mubble.unstable_stone": "Unstabiel steen",
+	"block.mubble.fluid_tank": "Vloeistoftank",
 
 
 	"block.mubble.question_block": "?-blok",
@@ -312,7 +312,7 @@
 	"block.mubble.black_mushroom_block": "Zwart paddenstoelenblok",
 
 
-	"//block.mubble.kirby_block": "Kirby Block",
+	"block.mubble.kirby_block": "Kirby blok",
 
 
 	"block.mubble.blue_tetris_block": "Blauw Tetris blok",
@@ -372,22 +372,22 @@
 	"block.mubble.spring": "Veer",
 
 
-	"//block.mubble.scarlet_planks": "Scarlet Planks",
-	"//block.mubble.scarlet_sapling": "Scarlet Sapling",
-	"//block.mubble.scarlet_log": "Scarlet Log",
-	"//block.mubble.stripped_scarlet_log": "Stripped Scarlet Log",
-	"//block.mubble.scarlet_wood": "Scarlet Wood",
-	"//block.mubble.stripped_scarlet_wood": "Stripped Scarlet Wood",
-	"//block.mubble.scarlet_leaves": "Scarlet Leaves",
-	"//block.mubble.scarlet_pressure_plate": "Scarlet Pressure Plate",
-	"//block.mubble.scarlet_trapdoor": "Scarlet Trapdoor",
-	"//block.mubble.scarlet_button": "Scarlet Button",
-	"//block.mubble.scarlet_stairs": "Scarlet Stairs",
-	"//block.mubble.scarlet_slab": "Scarlet Slab",
-	"//block.mubble.scarlet_vertical_slab": "Scarlet Vertical Slab",
-	"//block.mubble.scarlet_fence_gate": "Scarlet Fence Gate",
-	"//block.mubble.scarlet_fence": "Scarlet Fence",
-	"//block.mubble.scarlet_door": "Scarlet Door",
+	"block.mubble.scarlet_planks": "Scharlakehouten planken",
+	"block.mubble.scarlet_sapling": "Scharlakekiemplant",
+	"block.mubble.scarlet_log": "Scharlakeboomstam",
+	"block.mubble.stripped_scarlet_log": "Gestripte scharlakeboomstam",
+	"block.mubble.scarlet_wood": "Scharlakehout",
+	"block.mubble.stripped_scarlet_wood": "Gestripte scharlakehout",
+	"block.mubble.scarlet_leaves": "Scharlakebladeren",
+	"block.mubble.scarlet_pressure_plate": "Scharlakehouten drukplaat",
+	"block.mubble.scarlet_trapdoor": "Scharlakehouten valluik",
+	"block.mubble.scarlet_button": "Scharlakehouten knop",
+	"block.mubble.scarlet_stairs": "Scharlakehouten trap",
+	"block.mubble.scarlet_slab": "Scharlakehouten plaat",
+	"block.mubble.scarlet_vertical_slab": "Scharlakehouten verticale plaat",
+	"block.mubble.scarlet_fence_gate": "Scharlakehouten poort",
+	"block.mubble.scarlet_fence": "Scharlakehouten hek",
+	"block.mubble.scarlet_door": "Scharlakehouten duur",
 	"block.mubble.scarlet_mushroom": "Scharlake paddenstoel",
 	"block.mubble.scarlet_orchid": "Scharlake orchidee",
 
@@ -425,30 +425,30 @@
 	"block.mubble.potato_flower": "Aardappelbloem",
 
 
-	"//block.mubble.potted_palm_sapling": "Potted Palm Sapling",
-	"//block.mubble.potted_fire_flower": "Potted Fire Flower",
-	"//block.mubble.potted_ice_flower": "Potted Ice Flower",
-	"//block.mubble.potted_boomerang_flower": "Potted Boomerang Flower",
-	"//block.mubble.potted_cloud_flower": "Potted Cloud Flower",
-	"//block.mubble.potted_gold_flower": "Potted Gold Flower",
-	"//block.mubble.potted_blue_mushroom": "Potted Blue Mushroom",
-	"//block.mubble.potted_light_blue_mushroom": "Potted Light Blue Mushroom",
-	"//block.mubble.potted_cyan_mushroom": "Potted Cyan Mushroom",
-	"//block.mubble.potted_green_mushroom": "Potted Green Mushroom",
-	"//block.mubble.potted_lime_mushroom": "Potted Lime Mushroom",
-	"//block.mubble.potted_yellow_mushroom": "Potted Yellow Mushroom",
-	"//block.mubble.potted_orange_mushroom": "Potted Orange Mushroom",
-	"//block.mubble.potted_pink_mushroom": "Potted Pink Mushroom",
-	"//block.mubble.potted_magenta_mushroom": "Potted Magenta Mushroom",
-	"//block.mubble.potted_purple_mushroom": "Potted Purple Mushroom",
-	"//block.mubble.potted_white_mushroom": "Potted White Mushroom",
-	"//block.mubble.potted_light_gray_mushroom": "Potted Light Gray Mushroom",
-	"//block.mubble.potted_gray_mushroom": "Potted Gray Mushroom",
-	"//block.mubble.potted_black_mushroom": "Potted Black Mushroom",
-	"//block.mubble.potted_scarlet_sapling": "Potted Scarlet Sapling",
-	"//block.mubble.potted_scarlet_mushroom": "Potted Scarlet Mushroom",
-	"//block.mubble.potted_scarlet_orchid": "Potted Scarlet Orchid",
-	"//block.mubble.potted_potato_flower": "Potted Potato Flower",
+	"block.mubble.potted_palm_sapling": "Gepotte palmkiemplant",
+	"block.mubble.potted_fire_flower": "Gepotte vuur bloem",
+	"block.mubble.potted_ice_flower": "Gepotte ijs bloem",
+	"block.mubble.potted_boomerang_flower": "Gepotte boomerang bloem",
+	"block.mubble.potted_cloud_flower": "Gepotte wolk bloem",
+	"block.mubble.potted_gold_flower": "Gepotte gouden bloem",
+	"block.mubble.potted_blue_mushroom": "Gepotte blauwe paddenstoel",
+	"block.mubble.potted_light_blue_mushroom": "Gepotte lichtblauwe paddenstoel",
+	"block.mubble.potted_cyan_mushroom": "Gepotte turquoise paddenstoel",
+	"block.mubble.potted_green_mushroom": "Gepotte groene paddenstoel",
+	"block.mubble.potted_lime_mushroom": "Gepotte lichtgroene paddenstoel",
+	"block.mubble.potted_yellow_mushroom": "Gepotte gele paddenstoel",
+	"block.mubble.potted_orange_mushroom": "Gepotte oranje paddenstoel",
+	"block.mubble.potted_pink_mushroom": "Gepotte roze paddenstoel",
+	"block.mubble.potted_magenta_mushroom": "Gepotte maganta paddenstoel",
+	"block.mubble.potted_purple_mushroom": "Gepotte paarse paddenstoel",
+	"block.mubble.potted_white_mushroom": "Gepotte witte paddenstoel",
+	"block.mubble.potted_light_gray_mushroom": "Gepotte lichtgrijze paddenstoel",
+	"block.mubble.potted_gray_mushroom": "Gepotte grijze paddenstoel",
+	"block.mubble.potted_black_mushroom": "Gepotte zwarte paddenstoel",
+	"block.mubble.potted_scarlet_sapling": "Gepotte Scharlakekiemplant",
+	"block.mubble.potted_scarlet_mushroom": "Gepotte Scharlake paddenstoel",
+	"block.mubble.potted_scarlet_orchid": "Gepotte Scharlake orchidee",
+	"block.mubble.potted_potato_flower": "Gepotte Aardappelbloem",
 
 
 
@@ -466,9 +466,9 @@
 	"item.mubble.tomato": "Tomaat",
 	"item.mubble.salad": "Salade",
 	"item.mubble.cheese": "Kaas",
-	"//item.mubble.banana": "Banana",
-	"//item.mubble.apricot": "Apricot",
-	"//item.mubble.mango": "Mango",
+	"item.mubble.banana": "Bannaan",
+	"item.mubble.apricot": "Abrikoos",
+	"item.mubble.mango": "Mango",
 	"item.mubble.totem_of_ascending": "Totem der opstijging",
 
 
@@ -535,7 +535,7 @@
 	"item.mubble.remix_disc_nb_harvest_hazards": "Muziekplaat",
 	"item.mubble.remix_disc_nb_sweden": "Muziekplaat",
 	"item.mubble.remix_disc_nb_waluigi_pinball": "Muziekplaat",
-	"item.mubble.remix_disc_nb_beware_the_forest_mushrooms.desc": "Super Mario RPG: Legend of the Seven Stars - Beware the Forest's Mushrooms (NoteBlock Remix)",
+	"item.mubble.remix_disc_nb_beware_the_forest_mushrooms.desc": "Super Mario RPG: Legend of the Seven Stars - Beware the Forest's paddenstoels (NoteBlock Remix)",
 	"item.mubble.remix_disc_nb_buoy_base_galaxy.desc": "Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)",
 	"item.mubble.remix_disc_nb_fly_octo_fly.desc": "Splatoon 2 - Fly Octo Fly (NoteBlock Remix)",
 	"item.mubble.remix_disc_nb_harvest_hazards.desc": "Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)",
@@ -560,14 +560,14 @@
 	"item.mubble.vanish_cap": "Verdwijn pet",
 	"item.mubble.wing_cap": "Vleugel pet",
 	"item.mubble.gooigi_cap": "Gooigi's pet",
-	"//item.mubble.gold_mario_cap": "Gold Mario Cap",
-	"//item.mubble.silver_luigi_cap": "Silver Luigi Cap",
+	"item.mubble.gold_mario_cap": "Goude Mario pet",
+	"item.mubble.silver_luigi_cap": "Zilvere Luigi pet",
 	"item.mubble.princess_peach_crown": "Prinses Peach's kroon",
 	"item.mubble.princess_daisy_crown": "Prinses Daisy's kroon",
 	"item.mubble.rosalina_crown": "Rosaline's kroon",
 	"item.mubble.pink_gold_peach_crown": "Rozegouden Peach's kroon",
 	"item.mubble.super_crown": "Superkroon",
-	"//item.mubble.mario_wedding_hat": "Mario's Wedding Hat",
+	"item.mubble.mario_wedding_hat": "Mario's trouwdag hoed",
 	"item.mubble.broque_monsieur_head": "Broque Monsieur's hoofd",
 
 
@@ -587,7 +587,7 @@
 	"item.mubble.baldi_head": "Baldi's hoofd",
 
 
-	"//item.mubble.paul_mask": "Paul's Mask",
+	"item.mubble.paul_mask": "Paul's masker",
 
 
 	"item.mubble.mayro_cap": "Mayro's pet",
@@ -603,9 +603,9 @@
 
 
 	"comment": "BIOMES",
-	"//biome.mubble.autumn_oak_forest": "Autumn Oak Forest",
-	"//biome.mubble.cherry_oak_forest": "Cherry Oak Forest",
-	"//biome.mubble.scarlet_forest": "Scarlet Forest",
+	"biome.mubble.autumn_oak_forest": "Herfsteiken bos",
+	"biome.mubble.cherry_oak_forest": "Kerseneiken bos",
+	"biome.mubble.scarlet_forest": "Scharlake bos",
 
 
 
