--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -24,12 +24,35 @@
 	"//block.mubble.prismarine_brick_vertical_slab": "Prismarine Brick Vertical Slab",
 	"//block.mubble.dark_prismarine_vertical_slab": "Dark Prismarine Vertical Slab",
 
+	"//block.mubble.oak_leaves_carpet": "Oak Leaves Carpet",
+	"//block.mubble.spruce_leaves_carpet": "Spruce Leaves Carpet",
+	"//block.mubble.birch_leaves_carpet": "Birch Leaves Carpet",
+	"//block.mubble.jungle_leaves_carpet": "Jungle Leaves Carpet",
+	"//block.mubble.acacia_leaves_carpet": "Acacia Leaves Carpet",
+	"//block.mubble.dark_oak_leaves_carpet": "Dark Oak Leaves Carpet",
+
 	"block.mubble.vanadium_block": "Vanadium-block",
 	"block.mubble.vanadium_ore": "Vanadium-Erz",
 	"//block.mubble.autumn_oak_sapling": "Autumn Oak Sapling",
 	"//block.mubble.autumn_oak_leaves": "Autumn Oak Leaves",
+	"//block.mubble.autumn_oak_leaves_carpet": "Autumn Oak Leaves Carpet",
+	"//block.mubble.cherry_oak_planks": "Cherry Oak Planks",
 	"//block.mubble.cherry_oak_sapling": "Cherry Oak Sapling",
+	"//block.mubble.cherry_oak_log": "Cherry Oak Log",
+	"//block.mubble.stripped_cherry_oak_log": "Stripped Cherry Oak Log",
+	"//block.mubble.cherry_oak_wood": "Cherry Oak Wood",
+	"//block.mubble.stripped_cherry_oak_wood": "Stripped Cherry Oak Wood",
 	"//block.mubble.cherry_oak_leaves": "Cherry Oak Leaves",
+	"//block.mubble.cherry_oak_leaves_carpet": "Cherry Oak Leaves Carpet",
+	"//block.mubble.cherry_oak_pressure_plate": "Cherry Oak Pressure Plate",
+	"//block.mubble.cherry_oak_trapdoor": "Cherry Oak Trapdoor",
+	"//block.mubble.cherry_oak_button": "Cherry Oak Button",
+	"//block.mubble.cherry_oak_stairs": "Cherry Oak Stairs",
+	"//block.mubble.cherry_oak_slab": "Cherry Oak Slab",
+	"//block.mubble.cherry_oak_vertical_slab": "Cherry Oak Vertical Slab",
+	"//block.mubble.cherry_oak_fence_gate": "Cherry Oak Fence Gate",
+	"//block.mubble.cherry_oak_fence": "Cherry Oak Fence",
+	"//block.mubble.cherry_oak_door": "Cherry Oak Door",
 	"block.mubble.palm_planks": "Palmenholzbretter",
 	"block.mubble.palm_sapling": "Palmensetzling",
 	"block.mubble.palm_log": "Palmenstamm",
@@ -37,6 +60,7 @@
 	"block.mubble.palm_wood": "Palmenholz",
 	"block.mubble.stripped_palm_wood": "Entrindetes Palmenholz",
 	"block.mubble.palm_leaves": "Palmenlaub",
+	"//block.mubble.palm_leaves_carpet": "Palm Leaves Carpet",
 	"block.mubble.palm_pressure_plate": "Palmenholzdruckplatte",
 	"block.mubble.palm_trapdoor": "Palmenholzfalltür",
 	"block.mubble.palm_button": "Palmenholzknopf",
@@ -378,6 +402,7 @@
 	"//block.mubble.scarlet_wood": "Scarlet Wood",
 	"//block.mubble.stripped_scarlet_wood": "Stripped Scarlet Wood",
 	"//block.mubble.scarlet_leaves": "Scarlet Leaves",
+	"//block.mubble.scarlet_leaves_carpet": "Scarlet Leaves Carpet",
 	"//block.mubble.scarlet_pressure_plate": "Scarlet Pressure Plate",
 	"//block.mubble.scarlet_trapdoor": "Scarlet Trapdoor",
 	"//block.mubble.scarlet_button": "Scarlet Button",
@@ -424,6 +449,8 @@
 	"block.mubble.potato_flower": "Kartoffelblume",
 
 
+	"//block.mubble.potted_autumn_oak_sapling": "Potted Autumn Oak Sapling",
+	"//block.mubble.potted_cherry_oak_sapling": "Potted Cherry Oak Sapling",
 	"//block.mubble.potted_palm_sapling": "Potted Palm Sapling",
 	"//block.mubble.potted_fire_flower": "Potted Fire Flower",
 	"//block.mubble.potted_ice_flower": "Potted Ice Flower",
