--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -36,9 +36,23 @@
 	"block.mubble.autumn_oak_sapling": "Autumn Oak Sapling",
 	"block.mubble.autumn_oak_leaves": "Autumn Oak Leaves",
 	"block.mubble.autumn_oak_leaves_carpet": "Autumn Oak Leaves Carpet",
+	"block.mubble.cherry_oak_planks": "Cherry Oak Planks",
 	"block.mubble.cherry_oak_sapling": "Cherry Oak Sapling",
+	"block.mubble.cherry_oak_log": "Cherry Oak Log",
+	"block.mubble.stripped_cherry_oak_log": "Stripped Cherry Oak Log",
+	"block.mubble.cherry_oak_wood": "Cherry Oak Wood",
+	"block.mubble.stripped_cherry_oak_wood": "Stripped Cherry Oak Wood",
 	"block.mubble.cherry_oak_leaves": "Cherry Oak Leaves",
 	"block.mubble.cherry_oak_leaves_carpet": "Cherry Oak Leaves Carpet",
+	"block.mubble.cherry_oak_pressure_plate": "Cherry Oak Pressure Plate",
+	"block.mubble.cherry_oak_trapdoor": "Cherry Oak Trapdoor",
+	"block.mubble.cherry_oak_button": "Cherry Oak Button",
+	"block.mubble.cherry_oak_stairs": "Cherry Oak Stairs",
+	"block.mubble.cherry_oak_slab": "Cherry Oak Slab",
+	"block.mubble.cherry_oak_vertical_slab": "Cherry Oak Vertical Slab",
+	"block.mubble.cherry_oak_fence_gate": "Cherry Oak Fence Gate",
+	"block.mubble.cherry_oak_fence": "Cherry Oak Fence",
+	"block.mubble.cherry_oak_door": "Cherry Oak Door",
 	"block.mubble.palm_planks": "Palm Planks",
 	"block.mubble.palm_sapling": "Palm Sapling",
 	"block.mubble.palm_log": "Palm Log",
@@ -436,6 +450,8 @@
 	"block.mubble.potato_flower": "Potato Flower",
 
 
+	"block.mubble.potted_autumn_oak_sapling": "Potted Autumn Oak Sapling",
+	"block.mubble.potted_cherry_oak_sapling": "Potted Cherry Oak Sapling",
 	"block.mubble.potted_palm_sapling": "Potted Palm Sapling",
 	"block.mubble.potted_fire_flower": "Potted Fire Flower",
 	"block.mubble.potted_ice_flower": "Potted Ice Flower",
