--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -23,13 +23,36 @@
 	"block.mubble.prismarine_vertical_slab": "Prismarien verticale plaat",
 	"block.mubble.prismarine_brick_vertical_slab": "Prismarienblokstenen verticale plaat",
 	"block.mubble.dark_prismarine_vertical_slab": "Donkereprismarien verticale plaat",
+
+	"//block.mubble.oak_leaves_carpet": "Oak Leaves Carpet",
+	"//block.mubble.spruce_leaves_carpet": "Spruce Leaves Carpet",
+	"//block.mubble.birch_leaves_carpet": "Birch Leaves Carpet",
+	"//block.mubble.jungle_leaves_carpet": "Jungle Leaves Carpet",
+	"//block.mubble.acacia_leaves_carpet": "Acacia Leaves Carpet",
+	"//block.mubble.dark_oak_leaves_carpet": "Dark Oak Leaves Carpet",
 	
 	"block.mubble.vanadium_block": "Vanadiumblok",
 	"block.mubble.vanadium_ore": "Vanadiumerts",
 	"block.mubble.autumn_oak_sapling": "Herfsteikkiemplant",
 	"block.mubble.autumn_oak_leaves": "Herfsteikbladeren",
+	"//block.mubble.autumn_oak_leaves_carpet": "Autumn Oak Leaves Carpet",
+	"//block.mubble.cherry_oak_planks": "Cherry Oak Planks",
 	"block.mubble.cherry_oak_sapling": "Kerseneikkiemplant",
+	"//block.mubble.cherry_oak_log": "Cherry Oak Log",
+	"//block.mubble.stripped_cherry_oak_log": "Stripped Cherry Oak Log",
+	"//block.mubble.cherry_oak_wood": "Cherry Oak Wood",
+	"//block.mubble.stripped_cherry_oak_wood": "Stripped Cherry Oak Wood",
 	"block.mubble.cherry_oak_leaves": "Kerseneikbladeren",
+	"//block.mubble.cherry_oak_leaves_carpet": "Cherry Oak Leaves Carpet",
+	"//block.mubble.cherry_oak_pressure_plate": "Cherry Oak Pressure Plate",
+	"//block.mubble.cherry_oak_trapdoor": "Cherry Oak Trapdoor",
+	"//block.mubble.cherry_oak_button": "Cherry Oak Button",
+	"//block.mubble.cherry_oak_stairs": "Cherry Oak Stairs",
+	"//block.mubble.cherry_oak_slab": "Cherry Oak Slab",
+	"//block.mubble.cherry_oak_vertical_slab": "Cherry Oak Vertical Slab",
+	"//block.mubble.cherry_oak_fence_gate": "Cherry Oak Fence Gate",
+	"//block.mubble.cherry_oak_fence": "Cherry Oak Fence",
+	"//block.mubble.cherry_oak_door": "Cherry Oak Door",
 	"block.mubble.palm_planks": "Palmhouten planken",
 	"block.mubble.palm_sapling": "Palmkiemplant",
 	"block.mubble.palm_log": "Palmstam",
@@ -37,6 +60,7 @@
 	"block.mubble.palm_wood": "Palmhout",
 	"block.mubble.stripped_palm_wood": "Gestripte palmhout",
 	"block.mubble.palm_leaves": "Palmbladeren",
+	"//block.mubble.palm_leaves_carpet": "Palm Leaves Carpet",
 	"block.mubble.palm_pressure_plate": "Palmhouten drukplaat",
 	"block.mubble.palm_trapdoor": "Palmhouten valluik",
 	"block.mubble.palm_button": "Palmhouten knop",
@@ -379,6 +403,7 @@
 	"block.mubble.scarlet_wood": "Scharlakehout",
 	"block.mubble.stripped_scarlet_wood": "Gestripte scharlakehout",
 	"block.mubble.scarlet_leaves": "Scharlakebladeren",
+	"//block.mubble.scarlet_leaves_carpet": "Scarlet Leaves Carpet",
 	"block.mubble.scarlet_pressure_plate": "Scharlakehouten drukplaat",
 	"block.mubble.scarlet_trapdoor": "Scharlakehouten valluik",
 	"block.mubble.scarlet_button": "Scharlakehouten knop",
@@ -425,6 +450,8 @@
 	"block.mubble.potato_flower": "Aardappelbloem",
 
 
+	"//block.mubble.potted_autumn_oak_sapling": "Potted Autumn Oak Sapling",
+	"//block.mubble.potted_cherry_oak_sapling": "Potted Cherry Oak Sapling",
 	"block.mubble.potted_palm_sapling": "Gepotte palmkiemplant",
 	"block.mubble.potted_fire_flower": "Gepotte vuur bloem",
 	"block.mubble.potted_ice_flower": "Gepotte ijs bloem",
