--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -24,12 +24,35 @@
 	"block.mubble.prismarine_brick_vertical_slab": "Laje Vertical de Tijolo de Prismarina",
 	"block.mubble.dark_prismarine_vertical_slab": "Laje Vertical de Prismarina Escura",
 
+	"//block.mubble.oak_leaves_carpet": "Oak Leaves Carpet",
+	"//block.mubble.spruce_leaves_carpet": "Spruce Leaves Carpet",
+	"//block.mubble.birch_leaves_carpet": "Birch Leaves Carpet",
+	"//block.mubble.jungle_leaves_carpet": "Jungle Leaves Carpet",
+	"//block.mubble.acacia_leaves_carpet": "Acacia Leaves Carpet",
+	"//block.mubble.dark_oak_leaves_carpet": "Dark Oak Leaves Carpet",
+
 	"block.mubble.vanadium_block": "Bloco de Vanadium",
 	"block.mubble.vanadium_ore": "Minério de Vanadium",
 	"block.mubble.autumn_oak_sapling": "Muda de Carvalho de Outono",
 	"block.mubble.autumn_oak_leaves": "Folhas de Carvalho de Outono",
+	"//block.mubble.autumn_oak_leaves_carpet": "Autumn Oak Leaves Carpet",
+	"//block.mubble.cherry_oak_planks": "Cherry Oak Planks",
 	"block.mubble.cherry_oak_sapling": "Muda de Carvalho Cereja",
+	"//block.mubble.cherry_oak_log": "Cherry Oak Log",
+	"//block.mubble.stripped_cherry_oak_log": "Stripped Cherry Oak Log",
+	"//block.mubble.cherry_oak_wood": "Cherry Oak Wood",
+	"//block.mubble.stripped_cherry_oak_wood": "Stripped Cherry Oak Wood",
 	"block.mubble.cherry_oak_leaves": "Folhas de Carvalho Cereja",
+	"//block.mubble.cherry_oak_leaves_carpet": "Cherry Oak Leaves Carpet",
+	"//block.mubble.cherry_oak_pressure_plate": "Cherry Oak Pressure Plate",
+	"//block.mubble.cherry_oak_trapdoor": "Cherry Oak Trapdoor",
+	"//block.mubble.cherry_oak_button": "Cherry Oak Button",
+	"//block.mubble.cherry_oak_stairs": "Cherry Oak Stairs",
+	"//block.mubble.cherry_oak_slab": "Cherry Oak Slab",
+	"//block.mubble.cherry_oak_vertical_slab": "Cherry Oak Vertical Slab",
+	"//block.mubble.cherry_oak_fence_gate": "Cherry Oak Fence Gate",
+	"//block.mubble.cherry_oak_fence": "Cherry Oak Fence",
+	"//block.mubble.cherry_oak_door": "Cherry Oak Door",
 	"block.mubble.palm_planks": "Tábua de Palmeira",
 	"block.mubble.palm_sapling": "Muda de Palmeira",
 	"block.mubble.palm_log": "Palmeira",
@@ -37,6 +60,7 @@
 	"block.mubble.palm_wood": "Madeira de Palmeira",
 	"block.mubble.stripped_palm_wood": "Madeira de Palmeira Descascada",
 	"block.mubble.palm_leaves": "Folhas de Palmeira",
+	"//block.mubble.palm_leaves_carpet": "Palm Leaves Carpet",
 	"block.mubble.palm_pressure_plate": "Placa de Pressão de Palmeira",
 	"block.mubble.palm_trapdoor": "Alçapão de Palmeira",
 	"block.mubble.palm_button": "Botão de Palmeira",
@@ -379,6 +403,7 @@
 	"block.mubble.scarlet_wood": "Madeira de Escarlate",
 	"block.mubble.stripped_scarlet_wood": "Madeira de Escarlate Descascada",
 	"block.mubble.scarlet_leaves": "Folhas de Escarlate",
+	"//block.mubble.scarlet_leaves_carpet": "Scarlet Leaves Carpet",
 	"block.mubble.scarlet_pressure_plate": "Placa de Pressão de Escarlate",
 	"block.mubble.scarlet_trapdoor": "Alçapão de Escarlate",
 	"block.mubble.scarlet_button": "Botão de Escarlate",
@@ -425,6 +450,8 @@
 	"block.mubble.potato_flower": "Flor de Batata",
 
 
+	"//block.mubble.potted_autumn_oak_sapling": "Potted Autumn Oak Sapling",
+	"//block.mubble.potted_cherry_oak_sapling": "Potted Cherry Oak Sapling",
 	"block.mubble.potted_palm_sapling": "Vaso de Muda de Palmeira",
 	"block.mubble.potted_fire_flower": "Vaso de Flor de Fogo",
 	"block.mubble.potted_ice_flower": "Vaso de Flor de Gelo",
