--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -5,54 +5,54 @@
 
 
 	"comment": "BLOCKS",
-	"//block.mubble.oak_vertical_slab": "Oak Vertical Slab",
-	"//block.mubble.spruce_vertical_slab": "Spruce Vertical Slab",
-	"//block.mubble.birch_vertical_slab": "Birch Vertical Slab",
-	"//block.mubble.jungle_vertical_slab": "Jungle Vertical Slab",
-	"//block.mubble.acacia_vertical_slab": "Acacia Vertical Slab",
-	"//block.mubble.dark_oak_vertical_slab": "Dark Oak Vertical Slab",
-	"//block.mubble.stone_vertical_slab": "Stone Vertical Slab",
-	"//block.mubble.sandstone_vertical_slab": "Sandstone Vertical Slab",
-	"//block.mubble.cobblestone_vertical_slab": "Cobblestone Vertical Slab",
-	"//block.mubble.brick_vertical_slab": "Brick Vertical Slab",
-	"//block.mubble.stone_brick_vertical_slab": "Stone Brick Vertical Slab",
-	"//block.mubble.nether_brick_vertical_slab": "Nether Brick Vertical Slab",
-	"//block.mubble.quartz_vertical_slab": "Quartz Vertical Slab",
-	"//block.mubble.red_sandstone_vertical_slab": "Red Sandstone Vertical Slab",
-	"//block.mubble.purpur_vertical_slab": "Purpur Vertical Slab",
-	"//block.mubble.prismarine_vertical_slab": "Prismarine Vertical Slab",
-	"//block.mubble.prismarine_brick_vertical_slab": "Prismarine Brick Vertical Slab",
-	"//block.mubble.dark_prismarine_vertical_slab": "Dark Prismarine Vertical Slab",
+	"block.mubble.oak_vertical_slab": "Senkrechte Eichenholzstufe",
+	"block.mubble.spruce_vertical_slab": "Senkrechte Fichtenholzstufe",
+	"block.mubble.birch_vertical_slab": "Senkrechte Birkenholzstufe",
+	"block.mubble.jungle_vertical_slab": "Senkrechte Tropenholzstufe",
+	"block.mubble.acacia_vertical_slab": "Senkrechte Akazienholzstufe",
+	"block.mubble.dark_oak_vertical_slab": "Senkrechte Schwarzeichenholzstufe",
+	"block.mubble.stone_vertical_slab": "Senkrechte Steinstufe",
+	"block.mubble.sandstone_vertical_slab": "Senkrechte Sandsteinstufe",
+	"block.mubble.cobblestone_vertical_slab": "Senkrechte Bruchsteinstufe",
+	"block.mubble.brick_vertical_slab": "Senkrechte Ziegelstufe",
+	"block.mubble.stone_brick_vertical_slab": "Senkrechte Steinziegelstufe",
+	"block.mubble.nether_brick_vertical_slab": "Senkrechte Netherziegelstufe",
+	"block.mubble.quartz_vertical_slab": "Senkrechte Quarzstufe",
+	"block.mubble.red_sandstone_vertical_slab": "Rote senkrechte Sandsteinstufe",
+	"block.mubble.purpur_vertical_slab": "Senkrechte Purpurstufe",
+	"block.mubble.prismarine_vertical_slab": "Senkrechte Prismarinstufe",
+	"block.mubble.prismarine_brick_vertical_slab": "Senkrechte Prismarinziegelstufe",
+	"block.mubble.dark_prismarine_vertical_slab": "Senkrechte Dunkelprismarinstufe",
 
-	"//block.mubble.oak_leaves_carpet": "Oak Leaves Carpet",
-	"//block.mubble.spruce_leaves_carpet": "Spruce Leaves Carpet",
-	"//block.mubble.birch_leaves_carpet": "Birch Leaves Carpet",
-	"//block.mubble.jungle_leaves_carpet": "Jungle Leaves Carpet",
-	"//block.mubble.acacia_leaves_carpet": "Acacia Leaves Carpet",
-	"//block.mubble.dark_oak_leaves_carpet": "Dark Oak Leaves Carpet",
+	"block.mubble.oak_leaves_carpet": "Eichenlaubteppich",
+	"block.mubble.spruce_leaves_carpet": "Fichtennadelnteppich",
+	"block.mubble.birch_leaves_carpet": "Birkenlaubteppich",
+	"block.mubble.jungle_leaves_carpet": "Tropenbaumlaubteppich",
+	"block.mubble.acacia_leaves_carpet": "Akazienlaubteppich",
+	"block.mubble.dark_oak_leaves_carpet": "Schwarzeichenlaubteppich",
 
 	"block.mubble.vanadium_block": "Vanadium-block",
 	"block.mubble.vanadium_ore": "Vanadium-Erz",
-	"//block.mubble.autumn_oak_sapling": "Autumn Oak Sapling",
-	"//block.mubble.autumn_oak_leaves": "Autumn Oak Leaves",
-	"//block.mubble.autumn_oak_leaves_carpet": "Autumn Oak Leaves Carpet",
-	"//block.mubble.cherry_oak_planks": "Cherry Oak Planks",
-	"//block.mubble.cherry_oak_sapling": "Cherry Oak Sapling",
-	"//block.mubble.cherry_oak_log": "Cherry Oak Log",
-	"//block.mubble.stripped_cherry_oak_log": "Stripped Cherry Oak Log",
-	"//block.mubble.cherry_oak_wood": "Cherry Oak Wood",
-	"//block.mubble.stripped_cherry_oak_wood": "Stripped Cherry Oak Wood",
-	"//block.mubble.cherry_oak_leaves": "Cherry Oak Leaves",
-	"//block.mubble.cherry_oak_leaves_carpet": "Cherry Oak Leaves Carpet",
-	"//block.mubble.cherry_oak_pressure_plate": "Cherry Oak Pressure Plate",
-	"//block.mubble.cherry_oak_trapdoor": "Cherry Oak Trapdoor",
-	"//block.mubble.cherry_oak_button": "Cherry Oak Button",
-	"//block.mubble.cherry_oak_stairs": "Cherry Oak Stairs",
-	"//block.mubble.cherry_oak_slab": "Cherry Oak Slab",
-	"//block.mubble.cherry_oak_vertical_slab": "Cherry Oak Vertical Slab",
-	"//block.mubble.cherry_oak_fence_gate": "Cherry Oak Fence Gate",
-	"//block.mubble.cherry_oak_fence": "Cherry Oak Fence",
-	"//block.mubble.cherry_oak_door": "Cherry Oak Door",
+	"block.mubble.autumn_oak_sapling": "Herbsteichensetzling",
+	"block.mubble.autumn_oak_leaves": "Herbsteichenlaub",
+	"block.mubble.autumn_oak_leaves_carpet": "Herbsteichenlaubteppich",
+	"block.mubble.cherry_oak_planks": "Kirscheichenholzbretter",
+	"block.mubble.cherry_oak_sapling": "Kirscheichensetzling",
+	"block.mubble.cherry_oak_log": "Kirscheichenstamm",
+	"block.mubble.stripped_cherry_oak_log": "Entrindeter Kirscheichenstamm",
+	"block.mubble.cherry_oak_wood": "Kirscheichenholz",
+	"block.mubble.stripped_cherry_oak_wood": "Entrindeter Kirscheichenholz",
+	"block.mubble.cherry_oak_leaves": "Kirscheichenlaub",
+	"block.mubble.cherry_oak_leaves_carpet": "Kirscheichenlaubteppich",
+	"block.mubble.cherry_oak_pressure_plate": "Kirscheichenholzdruckplatte",
+	"block.mubble.cherry_oak_trapdoor": "Kirscheichenholzfalltür",
+	"block.mubble.cherry_oak_button": "Kirscheichenholzknopf",
+	"block.mubble.cherry_oak_stairs": "Kirscheichenholztreppe",
+	"block.mubble.cherry_oak_slab": "Kirscheichenholzstufe",
+	"block.mubble.cherry_oak_vertical_slab": "Senkrechte Kirscheichenholzstufe",
+	"block.mubble.cherry_oak_fence_gate": "Kirscheichenholzzauntor",
+	"block.mubble.cherry_oak_fence": "Kirscheichenholzzaun",
+	"block.mubble.cherry_oak_door": "Kirscheichenholztür",
 	"block.mubble.palm_planks": "Palmenholzbretter",
 	"block.mubble.palm_sapling": "Palmensetzling",
 	"block.mubble.palm_log": "Palmenstamm",
@@ -60,7 +60,7 @@
 	"block.mubble.palm_wood": "Palmenholz",
 	"block.mubble.stripped_palm_wood": "Entrindetes Palmenholz",
 	"block.mubble.palm_leaves": "Palmenlaub",
-	"//block.mubble.palm_leaves_carpet": "Palm Leaves Carpet",
+	"block.mubble.palm_leaves_carpet": "Palmenlaubteppich",
 	"block.mubble.palm_pressure_plate": "Palmenholzdruckplatte",
 	"block.mubble.palm_trapdoor": "Palmenholzfalltür",
 	"block.mubble.palm_button": "Palmenholzknopf",
@@ -286,8 +286,8 @@
 	"block.mubble.gray_balloon": "Grauer Luftballon",
 	"block.mubble.black_balloon": "Schwarzer Luftballon",
 
-	"//block.mubble.unstable_stone": "Unstable Stone",
-	"//block.mubble.fluid_tank": "Fluid Tank",
+	"block.mubble.unstable_stone": "Instabiler Stein",
+	"block.mubble.fluid_tank": "Flüssigkeitsbehälter",
 
 
 	"block.mubble.question_block": "?-block",
@@ -335,7 +335,7 @@
 	"block.mubble.black_mushroom_block": "Schwarzer Pilzblock",
 
 
-	"//block.mubble.kirby_block": "Kirby Block",
+	"block.mubble.kirby_block": "Kirbyblock",
 
 
 	"block.mubble.blue_tetris_block": "Blauer Tetrisblock",
@@ -395,23 +395,23 @@
 	"block.mubble.spring": "Feder",
 
 
-	"//block.mubble.scarlet_planks": "Scarlet Planks",
-	"//block.mubble.scarlet_sapling": "Scarlet Sapling",
-	"//block.mubble.scarlet_log": "Scarlet Log",
-	"//block.mubble.stripped_scarlet_log": "Stripped Scarlet Log",
-	"//block.mubble.scarlet_wood": "Scarlet Wood",
-	"//block.mubble.stripped_scarlet_wood": "Stripped Scarlet Wood",
-	"//block.mubble.scarlet_leaves": "Scarlet Leaves",
-	"//block.mubble.scarlet_leaves_carpet": "Scarlet Leaves Carpet",
-	"//block.mubble.scarlet_pressure_plate": "Scarlet Pressure Plate",
-	"//block.mubble.scarlet_trapdoor": "Scarlet Trapdoor",
-	"//block.mubble.scarlet_button": "Scarlet Button",
-	"//block.mubble.scarlet_stairs": "Scarlet Stairs",
-	"//block.mubble.scarlet_slab": "Scarlet Slab",
-	"//block.mubble.scarlet_vertical_slab": "Scarlet Vertical Slab",
-	"//block.mubble.scarlet_fence_gate": "Scarlet Fence Gate",
-	"//block.mubble.scarlet_fence": "Scarlet Fence",
-	"//block.mubble.scarlet_door": "Scarlet Door",
+	"block.mubble.scarlet_planks": "Scharlachholzbretter",
+	"block.mubble.scarlet_sapling": "Scharlachsetzling",
+	"block.mubble.scarlet_log": "Scharlachstamm",
+	"block.mubble.stripped_scarlet_log": "Entrindeter Scharlachstamm",
+	"block.mubble.scarlet_wood": "Scharlachholz",
+	"block.mubble.stripped_scarlet_wood": "Entrindetes Scharlachholz",
+	"block.mubble.scarlet_leaves": "Scharlachlaub",
+	"block.mubble.scarlet_leaves_carpet": "Scharlachlaubteppich",
+	"block.mubble.scarlet_pressure_plate": "Scharlachholzdruckplatte",
+	"block.mubble.scarlet_trapdoor": "Scharlachholzfalltür",
+	"block.mubble.scarlet_button": "Scharlachholzknopf",
+	"block.mubble.scarlet_stairs": "Scharlachholztreppe",
+	"block.mubble.scarlet_slab": "Scharlachholzstufe",
+	"block.mubble.scarlet_vertical_slab": "Senkrechte Scharlachholzstufe",
+	"block.mubble.scarlet_fence_gate": "Scharlachholzzauntor",
+	"block.mubble.scarlet_fence": "Scharlachholzzaun",
+	"block.mubble.scarlet_door": "Scharlachholztür",
 	"block.mubble.scarlet_mushroom": "Scharlachroter Pilz",
 	"block.mubble.scarlet_orchid": "Scharlachrote Orchidee",
 
@@ -442,39 +442,39 @@
 	"block.mubble.point_puyo": "Punkte-Puyo",
 	"block.mubble.hard_puyo": "Harter Puyo",
 	"block.mubble.iron_puyo": "Eisen-Puyo",
-	"block.mubble.puyo_block": "Puyo-block",
+	"block.mubble.puyo_block": "Puyoblock",
 
 
-	"block.mubble.koretato_block": "Koretato-block",
+	"block.mubble.koretato_block": "Koretatoblock",
 	"block.mubble.potato_flower": "Kartoffelblume",
 
 
-	"//block.mubble.potted_autumn_oak_sapling": "Potted Autumn Oak Sapling",
-	"//block.mubble.potted_cherry_oak_sapling": "Potted Cherry Oak Sapling",
-	"//block.mubble.potted_palm_sapling": "Potted Palm Sapling",
-	"//block.mubble.potted_fire_flower": "Potted Fire Flower",
-	"//block.mubble.potted_ice_flower": "Potted Ice Flower",
-	"//block.mubble.potted_boomerang_flower": "Potted Boomerang Flower",
-	"//block.mubble.potted_cloud_flower": "Potted Cloud Flower",
-	"//block.mubble.potted_gold_flower": "Potted Gold Flower",
-	"//block.mubble.potted_blue_mushroom": "Potted Blue Mushroom",
-	"//block.mubble.potted_light_blue_mushroom": "Potted Light Blue Mushroom",
-	"//block.mubble.potted_cyan_mushroom": "Potted Cyan Mushroom",
-	"//block.mubble.potted_green_mushroom": "Potted Green Mushroom",
-	"//block.mubble.potted_lime_mushroom": "Potted Lime Mushroom",
-	"//block.mubble.potted_yellow_mushroom": "Potted Yellow Mushroom",
-	"//block.mubble.potted_orange_mushroom": "Potted Orange Mushroom",
-	"//block.mubble.potted_pink_mushroom": "Potted Pink Mushroom",
-	"//block.mubble.potted_magenta_mushroom": "Potted Magenta Mushroom",
-	"//block.mubble.potted_purple_mushroom": "Potted Purple Mushroom",
-	"//block.mubble.potted_white_mushroom": "Potted White Mushroom",
-	"//block.mubble.potted_light_gray_mushroom": "Potted Light Gray Mushroom",
-	"//block.mubble.potted_gray_mushroom": "Potted Gray Mushroom",
-	"//block.mubble.potted_black_mushroom": "Potted Black Mushroom",
-	"//block.mubble.potted_scarlet_sapling": "Potted Scarlet Sapling",
-	"//block.mubble.potted_scarlet_mushroom": "Potted Scarlet Mushroom",
-	"//block.mubble.potted_scarlet_orchid": "Potted Scarlet Orchid",
-	"//block.mubble.potted_potato_flower": "Potted Potato Flower",
+	"block.mubble.potted_autumn_oak_sapling": "Eingetopfter Herbsteichensetzling",
+	"block.mubble.potted_cherry_oak_sapling": "Eingetopfter Kirscheichenholzsetzling",
+	"block.mubble.potted_palm_sapling": "Eingetopfter Palmensetzling",
+	"block.mubble.potted_fire_flower": "Eingetopfte Feuerblume",
+	"block.mubble.potted_ice_flower": "Eingetopfte Eisblume",
+	"block.mubble.potted_boomerang_flower": "Eingetopfte Bumerangblume",
+	"block.mubble.potted_cloud_flower": "Eingetopfte Wolkenblume",
+	"block.mubble.potted_gold_flower": "Eingetopfte Goldblume",
+	"block.mubble.potted_blue_mushroom": "Eingetopfter blauer Pilz",
+	"block.mubble.potted_light_blue_mushroom": "Eingetopfter hellblauer Pilz",
+	"block.mubble.potted_cyan_mushroom": "Eingetopfter türkiser Pilz",
+	"block.mubble.potted_green_mushroom": "Eingetopfter grüner Pilz",
+	"block.mubble.potted_lime_mushroom": "Eingetopfter hellgrüner Pilz",
+	"block.mubble.potted_yellow_mushroom": "Eingetopfter gelber Pilz",
+	"block.mubble.potted_orange_mushroom": "Eingetopfter orange Pilz",
+	"block.mubble.potted_pink_mushroom": "Eingetopfter rosa Pilz",
+	"block.mubble.potted_magenta_mushroom": "Eingetopfter magenta Pilz",
+	"block.mubble.potted_purple_mushroom": "Eingetopfter violetter Pilz",
+	"block.mubble.potted_white_mushroom": "Eingetopfter weißer Pilz",
+	"block.mubble.potted_light_gray_mushroom": "Eingetopfter hellgrauer Pilz",
+	"block.mubble.potted_gray_mushroom": "Eingetopfter grauer Pilz",
+	"block.mubble.potted_black_mushroom": "Eingetopfter schwarzer Pilz",
+	"block.mubble.potted_scarlet_sapling": "Eingetopfter Scharlachsetzling",
+	"block.mubble.potted_scarlet_mushroom": "Eingetopfter Scharlachpilz",
+	"block.mubble.potted_scarlet_orchid": "Eingetopfte Scharlachrote Orchidee",
+	"block.mubble.potted_potato_flower": "Eingetopfte Kartoffelblume",
 
 
 
@@ -492,9 +492,9 @@
 	"item.mubble.tomato": "Tomate",
 	"item.mubble.salad": "Salat",
 	"item.mubble.cheese": "Käse",
-	"//item.mubble.banana": "Banana",
-	"//item.mubble.apricot": "Apricot",
-	"//item.mubble.mango": "Mango",
+	"item.mubble.banana": "Banane",
+	"item.mubble.apricot": "Aprikose",
+	"item.mubble.mango": "Mango",
 	"item.mubble.totem_of_ascending": "Totem des Aufsteigends",
 
 
@@ -617,7 +617,7 @@
 
 
 	"item.mubble.mayro_cap": "Mayros Mütze",
-	"item.mubble.noteblock_head": "Notenblock.mubble's Kopf",
+	"item.mubble.noteblock_head": "Notenblock's Kopf",
 
 
 
@@ -629,16 +629,16 @@
 
 
 	"comment": "BIOMES",
-	"//biome.mubble.autumn_oak_forest": "Autumn Oak Forest",
-	"//biome.mubble.cherry_oak_forest": "Cherry Oak Forest",
-	"//biome.mubble.scarlet_forest": "Scarlet Forest",
+	"biome.mubble.autumn_oak_forest": "Herbsteichenwald",
+	"biome.mubble.cherry_oak_forest": "Kirscheichenwald",
+	"biome.mubble.scarlet_forest": "Scharlachwald",
 
 
 
 	"comment": "SUBTITLES",
 	"subtitles.block.note_block.jump": "Notenblock genutzt",
-	"subtitles.block.question_block.mubble.loot.power_up": "?-block gibt Power-Up",
-	"subtitles.block.question_block.mubble.loot.coin": "?-block gibt Münze",
+	"subtitles.block.question_block.mubble.loot.power_up": "?-Block gibt Power-Up",
+	"subtitles.block.question_block.mubble.loot.coin": "?-Block gibt Münze",
 	"subtitles.block.spring.trigger": "Feder ausgelöst",
 	"subtitles.item.annoying_dog.disappear": "Nerviger Hund verschwindet",
 	"subtitles.item.annoying_dog.bark": "Nerviger Hund bellt",
